peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/Opportunity_Beneficial_Owner__c.object-meta.xml
<CustomObject>
    <label>Opportunity Beneficial Owner</label>
    <nameField>
        <displayFormat>OO-{0000}</displayFormat>
        <label>Opportunity Beneficial Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Beneficial Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>