peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Beneficial Owners</relationshipLabel>
    <relationshipName>Opportunity_Beneficial_Owners</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>