peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Contact_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Birthdate__c</fullName>
    <formula>Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Birthdate</label>
    <type>Date</type>
</CustomField>