peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Contact_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Address__c</fullName>
    <formula>IF ($Setup.Marlin_Configuration__c.Beneficial_Owner_Home_Address_Required__c
   , Contact__r.OtherStreet + &apos;, &apos; + Contact__r.OtherCity + &apos;, &apos; + TEXT (Contact__r.OtherStateCode) + &apos;, &apos; + Contact__r.OtherPostalCode
   , IF (!ISBLANK (Contact__r.OtherStreet)
      ,Contact__r.OtherStreet + &apos;, &apos; + Contact__r.OtherCity + &apos;, &apos; + TEXT (Contact__r.OtherStateCode) + &apos;, &apos; + Contact__r.OtherPostalCode
      ,Contact__r.MailingStreet + &apos;, &apos; + Contact__r.MailingCity + &apos;, &apos; + TEXT (Contact__r.MailingStateCode) + &apos;, &apos; + Contact__r.MailingPostalCode)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Address</label>
    <type>Text</type>
</CustomField>