peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Contact_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Postal_Code__c</fullName>
    <formula>IF ($Setup.Marlin_Configuration__c.Beneficial_Owner_Home_Address_Required__c
   ,Contact__r.OtherPostalCode
   , IF (!ISBLANK (Contact__r.OtherPostalCode)
      ,Contact__r.OtherPostalCode
      ,Contact__r.MailingPostalCode)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Postal Code</label>
    <type>Text</type>
</CustomField>