peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Beneficial Owners</relationshipLabel>
    <relationshipName>Opportunity_Beneficial_Owners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>