peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Ownership_Percent__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percent__c</fullName>
    <label>Ownership Percent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>