peac_dev/force-app/main/default/objects/Opportunity_Beneficial_Owner__c/fields/Related_End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_End_User_Account__c</fullName>
    <formula>Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related End User Account</label>
    <type>Text</type>
</CustomField>